--- a/.jshintrc
+++ b/.jshintrc
@@ -1,7 +1,8 @@
 {
-	"browser": true,
+  "browser": true,
     "browserify": true,
-	"devel": true,
+  "devel": true,
+  "laxbreak": true,
   "validthis": true,
-	"predef": [ "Pangea" ]
+  "predef": [ "Pangea" ]
 }
